src/test/deca/syntax/invalid/double_times.deca
//  Description :
//            Deux signes * d'affilés
//
// Résultat:
//extraneous input '*'
//
{
    int a = 2 ; 
    int b = a ** 2 ; 
}